[tool.black]
line-length = 80
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.poetry]
name = "portfolio"
version = "1.0.0"
description = "Personal Portfolio Project"
authors = ["Guillaume Bournique <gbournique@gmail.com>"]
repository = "https://github.com/gbourniq/portfolio"
readme = "README.md"
keywords = ["portfolio"]


[tool.poetry.dependencies]
python = "3.6.9"
django = { version = "^2.2.6", extras = [ "celery" ] }
django-celery-results = "^1.1.2"
django-redis = "^4.11.0"
django-tinymce4-lite = "^1.7.5"
Pillow = "^6.2.1"


[tool.poetry.dev-dependencies]
autoflake = "^1.3"
ansible = "2.9.2"
awscli = "1.16.309"
boto = "2.49.0"
botocore = "1.13.45"
black = "^19.3b0"
bump2version = "0.5.11"
cython = "^0.29"                                # Apache
isort = "^4.3.4"
pre-commit = "^2.1"
pylint = "^2.3.1"
pytest = "^5.3"
pytest-cov = "^2.8"
pytest-env = "^0.6.2"
pytest-ordering = "^0.6"
pytest-regressions = "^2.0"
pytest-testmon = "^1.0"
setuptools_scm = "^3.5"

[build-system]
requires = ["poetry>=1.0.0"]